--- a/front/index.html
+++ b/front/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Events</title>
+    <link rel="description" content="Explorez les événements autour de vous" />
+    <link rel="icon" href="/events/favicon.ico" sizes="48x48" />
+    <link rel="icon" href="/events/icon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/events/apple-touch-icon-180x180.png" />
+    <meta name="theme-color" content="#3cb371" />
   </head>
   <body>
+    <noscript>
+      <strong>Nous sommes désolés mais notre site ne fonctionne pas correctement sans JavaScript activé. Merci de l'activer pour profiter de notre site.</strong>
+    </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
