front: fix en-têtes html + factorisation nom du site

--- a/front/index.html
+++ b/front/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Évents</title>
-    <link rel="icon" href="{{ tibase_urltle }}/favicon.ico" sizes="48x48" />
-    <link rel="icon" href="{{ base_url }}/icon.svg" sizes="any" type="image/svg+xml" />
+    <title>{{ title }}</title>
+    <link rel="icon" href="{{ base_url }}favicon.ico" sizes="48x48" />
+    <link rel="icon" href="{{ base_url }}icon.svg" sizes="any" type="image/svg+xml" />
     <link rel="description" content="{{ description}}" />
-    <link rel="apple-touch-icon" href="{{ base_url }}/apple-touch-icon-180x180.png" />
-    <meta name="sitename" content="Évents" />
+    <link rel="apple-touch-icon" href="{{ base_url }}apple-touch-icon-180x180.png" />
+    <meta name="sitename" content="{{ title }}" />
     <meta name="description" content="{{ description }}" />
     <meta name="theme-color" content="#3cb371" />
     <meta name="robots" content="index, follow" />
     <meta name="copyright" content="© {{ year }} Ambi - Tous droits réservés" />
     <meta name="author" content="Ambi" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Évents" />
+    <meta property="og:title" content="{{ title }}" />
     <meta property="og:description" content="{{ description }}" />
-    <meta property="og:image" content="{{ base_url }}/screenshots/map.jpg" />
+    <meta property="og:image" content="{{ base_url }}screenshots/map.jpg" />
   </head>
   <body>
     <noscript>
