front: ajout de meta tags manquants

--- a/front/index.html
+++ b/front/index.html
@@ -18,6 +18,8 @@
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:description" content="{{ description }}" />
     <meta property="og:image" content="{{ base_url }}screenshots/map.jpg" />
+    <meta property="og:url" content="{{ base_url }}" />
+    <meta property="og:logo" content="{{ base_url }}icon.svg" />
   </head>
   <body>
     <noscript>
